Bug 52544 - SVG Use Cycle is not detected
Summary: SVG Use Cycle is not detected
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Nobody
URL: http://dev.w3.org/SVG/profiles/1.1F2/...
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-16 14:37 PST by Dirk Schulze
Modified: 2011-01-27 17:52 PST (History)
3 users (show)

See Also:


Attachments
Reduced test case (1018 bytes, image/svg+xml)
2011-01-16 14:38 PST, Dirk Schulze
no flags Details
Patch (4.45 KB, patch)
2011-01-26 20:56 PST, Leo Yang
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk Schulze 2011-01-16 14:37:47 PST
SVG Use Cycle is not detected. The attached link runs for ever. The test has multiple cycles, just one cycle is not detected. Try to upload a reduced example.
Comment 1 Dirk Schulze 2011-01-16 14:38:56 PST
Created attachment 79113 [details]
Reduced test case

Reduced test case. Don't know how to reduce the test further.
Comment 2 Leo Yang 2011-01-26 20:56:22 PST
Created attachment 80293 [details]
Patch
Comment 3 Dirk Schulze 2011-01-27 00:54:29 PST
Comment on attachment 80293 [details]
Patch

LGTM. r=me
Comment 4 WebKit Commit Bot 2011-01-27 17:51:19 PST
The commit-queue encountered the following flaky tests while processing attachment 80293 [details]:

http/tests/xmlhttprequest/re-login-async.html bug 51763 (author: ap@webkit.org)
The commit-queue is continuing to process your patch.
Comment 5 WebKit Commit Bot 2011-01-27 17:51:58 PST
Comment on attachment 80293 [details]
Patch

Clearing flags on attachment: 80293

Committed r76883: <http://trac.webkit.org/changeset/76883>
Comment 6 WebKit Commit Bot 2011-01-27 17:52:01 PST
All reviewed patches have been landed.  Closing bug.