2011-01-27  Leo Yang  <leo.yang@torchmobile.com.cn>

Reviewed by Dirk Schulze.

        SVG Use Cycle is not detected
        https://bugs.webkit.org/show_bug.cgi?id=52544

        Test for indirect <use> recursion. This test passes if
        no crash occurs.

        * svg/custom/recursive-use2-expected.txt: Added.
        * svg/custom/recursive-use2.svg: Added.
2011-01-27  Leo Yang  <leo.yang@torchmobile.com.cn>

        Reviewed by Dirk Schulze.

        SVG Use Cycle is not detected
        https://bugs.webkit.org/show_bug.cgi?id=52544

        We should check if SVGUseElement::buildInstanceTree finds problem
        for every child node. If it finds problem for any children we must
        return immediately because otherwise the foundProblem variable may
        be rewritten to false.

        Test: svg/custom/recursive-use2.svg

        * svg/SVGUseElement.cpp:
        (WebCore::SVGUseElement::buildInstanceTree):

Canonical link: https://commits.webkit.org/67081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76883 268f45cc-cd09-0410-ab3c-d52691b4dbfc